[gd_scene load_steps=8 format=3 uid="uid://hvw2s3j0lnfu"]

[ext_resource type="Script" path="res://HealthUpgrade.gd" id="1_rjv0c"]
[ext_resource type="PackedScene" uid="uid://0clj6a6fgcup" path="res://UI/health_anims.tscn" id="2_on106"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jwwop"]
radius = 110.05

[sub_resource type="Animation" id="Animation_pp05r"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealthAnims:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, -30), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_h3qiq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealthAnims:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gkqvt"]
_data = {
"Idle": SubResource("Animation_pp05r"),
"RESET": SubResource("Animation_h3qiq")
}

[sub_resource type="Curve" id="Curve_2b8fi"]
_data = [Vector2(0.00293255, 1), 0.0, 0.0, 0, 0, Vector2(0.740469, 0.648432), 0.0, 0.0, 0, 0, Vector2(0.985337, 0.0287725), 0.0, 0.0, 0, 0]
point_count = 3

[node name="HealthUpgrade" type="Area2D"]
scale = Vector2(0.3, 0.3)
script = ExtResource("1_rjv0c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jwwop")

[node name="HealthAnims" parent="." instance=ExtResource("2_on106")]
scale = Vector2(1, 1)
animation = &"Idle"
frame = 0
frame_progress = 0.692321

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = -140.0
offset_top = -183.333
offset_right = 163.0
offset_bottom = -133.333
theme_override_font_sizes/normal_font_size = 30
text = "Press \"I\" to interact"
scroll_active = false
shortcut_keys_enabled = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gkqvt")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 20
emission_shape = 2
emission_sphere_radius = 105.0
gravity = Vector2(2.08165e-12, -150)
scale_amount_min = 2.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_2b8fi")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="animation_finished" from="HealthAnims" to="." method="_on_health_anims_animation_finished"]
